# pitch-analysis

./: .gitignore  Makefile  pyproject.toml
experiments/: README.md
experiments/runs/football_yolo11/: args.yaml  results.csv
scripts/: download-football-players-detection-data.sh  train-football-players-detection-yolo11.sh
